wp_contextual/tests/error_unexpected_wp_context_meta_variant_name_value.stderr
error: Expected #[WpContext(edit, embed, view)]. Did you forget to add context types?
 --> tests/error_unexpected_wp_context_meta_variant_name_value.rs:5:7
  |
5 |     #[WpContext = "baz"]
  |       ^^^^^^^^^
